fixing wrapping tabs again

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -398,7 +398,7 @@ img, img a
 #primarynav ul
 {
 	float: left;
-	margin: 8px 10px 0 10px;
+	margin: 14px 10px 0 10px;
 	padding: 0;
 	border: 0;
 	list-style: none;
@@ -408,7 +408,7 @@ img, img a
 #primarynav #leftside ul
 {
   float: left;
-  margin-left:20px;
+ /* margin-left:20px;*/
 }
 
 #primarynav #rightside ul
@@ -420,8 +420,8 @@ img, img a
 {
 	display: block;
 	float: left;
-	margin: -7px 6px 0 6px;
-	line-height: 30px;
+	margin: -7px 3px 0 3px;
+	line-height: 24px;
 	text-align: center;
 	border: 1px solid #9d9d9d; 
 	border-bottom: none;
@@ -457,11 +457,11 @@ img, img a
 #primarynav a
 {
 	text-decoration: none;
-	text-align: center;
+	/*text-align: center;*/
 	display: block;
-	padding-right: 8px;
+	padding-right: 6px;
     color:white;
-  padding-left:8px;
+  padding-left:6px;
  
 }
 
@@ -524,8 +524,8 @@ img, img a
 #pagebody
 {
 	display: block;
-	width: 950px;
-	min-width: 950px;
+	min-width: 1150px;
+	min-width: 1150px;
 	clear: both;
 	margin: 0;
 	padding: 0;
@@ -750,9 +750,9 @@ img, img a
 #footer
 {
 	display: block;
-	width: 950px;
+	width: 1150px;
 		height: 33px;
-	min-width: 950px;
+	min-width: 1150px;
 	clear: both;
 	margin: 0;
 	padding: 6px 0 0 0;
@@ -894,7 +894,7 @@ body.fluid #container
 body.fluid #header
 {
 	width: 100%;
-	min-width: 950px;
+	min-width: 1150px;
 }
 
 
@@ -905,7 +905,7 @@ body.fluid #primarynav div.encase
 	width: auto;
 	left: 5px;
 	right: 5px;
-	min-width: 840px;
+	min-width: 1150px;
 }
 
 /* ---- Pagebody block elements ---------- */
@@ -979,16 +979,21 @@ body.fluid #content
 {
     z-index:9999;
 	float: left;
-	font-size: 1.8em;
-        line-height:1.8em;
+	font-size: 1.7em;
+        line-height:1.2em;
 	text-transform: capitalize;
-	margin-left: .5em;
-	margin-top: -26px;
-  white-space:nowrap;
+	margin-left: 5px;
+	padding: 0;
+	margin-top: -37px;
+  /*white-space:nowrap;*/
   font-family: "Trebuchet MS", "Avenir LT std", Helvetica, Arial, sans-serif;
   font-style: italic;
   *font-style: none;/*IE doesn't anti-alias italics well*/
   color: #e6e6e6;
+  max-height: 65px;
+  overflow: hidden;
+  max-width: 464px;
+  
 }
 
 table.course-choices {
